initial redux store

--- a/src/components/CurrencyCard/CurrencyCard.scss
+++ b/src/components/CurrencyCard/CurrencyCard.scss
@@ -11,5 +11,11 @@
 
     &-Row {
         display: flex;
+
+        &_justify {
+            &_between {
+                justify-content: space-between;
+            }
+        }
     }
 }
