--- a/src/components/CurrencyCard/CurrencyCard.scss
+++ b/src/components/CurrencyCard/CurrencyCard.scss
@@ -4,7 +4,7 @@
     padding: 70px 24px;
 
     &_type {
-        &_sell {
+        &_buy {
             background-color: $color-light-gray;
         }
     }
