--- a/src/components/CurrencySelect/CurrencySelect.scss
+++ b/src/components/CurrencySelect/CurrencySelect.scss
@@ -1,5 +1,7 @@
+@import '../../styles/variables.scss';
+
 .CurrencySelect {
     &-Value {
-        font-size: 42px;
+        font-size: $font-size-xl;
     }
 }
