--- a/src/components/PriceInput/PriceInput.scss
+++ b/src/components/PriceInput/PriceInput.scss
@@ -1,7 +1,9 @@
+@import '../../styles/variables.scss';
+
 .PriceInput {
     &-Input {
         width: 100%;
-        font-size: 42px;
+        font-size: $font-size-xl;
         text-align: right;
         outline: 0;
         border: 0;
