Arrow for currency selector

--- a/src/components/CurrencySelect/CurrencySelect.scss
+++ b/src/components/CurrencySelect/CurrencySelect.scss
@@ -6,6 +6,10 @@
 
     &-Value {
         cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 120px;
     }
 
     &-List {
