--- a/src/components/CurrencyCard/CurrencyCard.scss
+++ b/src/components/CurrencyCard/CurrencyCard.scss
@@ -18,4 +18,13 @@
             }
         }
     }
+
+    &-CardInfo {
+        margin-top: 10px;
+        font-size: $font-size-l;
+    }
+
+    &-Info_negative {
+        color: $color-red;
+    }
 }
