--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
 $font-family: 'Roboto', sans-serif;
 
 $font-size-xl: 42px;
+$font-size-l: 16px;
 
 $color-text-black: #333;
 $color-white: #fff;
 $color-gray: #b0b0b0;
 $color-light-gray: #f4f4f4;
+$color-red: #e4409e;
