--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,8 @@ $font-size-l: 16px;
 
 $color-text-black: #333;
 $color-white: #fff;
-$color-gray: #b0b0b0;
+$color-gray: #d8d8d8;
 $color-light-gray: #f4f4f4;
+$color-dark-gray: #929292;
 $color-red: #e4409e;
+$color-blue: #156edb;
