--- a/src/components/Application/Application.scss
+++ b/src/components/Application/Application.scss
@@ -2,6 +2,6 @@
 
 .Application {
     width: 500px;
-    border: 2px solid $color-light-gray;
-    border-radius: 4px;
+    border: 1px solid $color-gray;
+    border-radius: 3px;
 }
